--- a/index.html
+++ b/index.html
@@ -12,15 +12,26 @@
     </style>
   </head>
   <body>
-    <textarea id="textArea" cols="30" rows="10"></textarea>
+    <!-- <textarea id="textArea" cols="30" rows="10"></textarea> -->
     <div id="content"></div>
+    <input type="file" name="" id="file" />
   </body>
   <script src="./CustomElement.js"></script>
   <script>
     const contentElement = document.getElementById("content");
     const textCustom = CustomElementMarkDown("#content");
-    document.getElementById("textArea").onkeyup = function() {
-      textCustom.text(this.value);
+    // document.getElementById("textArea").onkeyup = function() {
+    //   textCustom.text(this.value);
+    // };
+    const file_ = document.getElementById("file");
+    file_.onchange = function() {
+      var reader = new FileReader();
+      reader.onload = function(e) {
+        var output = e.target.result;
+        textCustom.text(output);
+      }; //end onload()
+      reader.readAsText(this.files[0]);
+      console.log(this.files);
     };
   </script>
 </html>
